[tool.poetry]
name = "tts-clone-inference"
version = "0.1.0"
description = "parse the inference parts from tts from coqui.ai and refactoring for better inference"
authors = ["bruce <bruceunx@outlook.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
scipy = "^1.14.1"
pysbd = "^0.3.4"
einops = "^0.8.0"
num2words = "^0.5.13"
tokenizers = "0.19"
transformers = "^4.44.2"
spacy = "^3.7.6"
librosa = "^0.10.2.post1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
flake8 = "^7.1.1"
yapf = "^0.40.2"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
implicit_optional = true
ignore_missing_imports = true
